test/log/reduction/vrssum_v_i32.txt
vrssum_v_i32.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrssum_v_i32.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrssum_v_i32.c:30:6: warning: no previous prototype for 'vrssum_v_i32_golden' [-Wmissing-prototypes]
   30 | void vrssum_v_i32_golden(int32_t *a,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~
vrssum_v_i32.c: In function 'vrssum_v_i32_golden':
vrssum_v_i32.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vrssum_v_i32.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vrssum_v_i32.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vrssum_v_i32.c: In function 'main':
vrssum_v_i32.c:37:16: warning: declaration of 'a' shadows a parameter [-Wshadow]
   37 |     int32x16_t a;
      |                ^
vrssum_v_i32.c:30:35: note: shadowed declaration is here
   30 | void vrssum_v_i32_golden(int32_t *a,int32_t *exp_result) {
      |                          ~~~~~~~~~^
vrssum_v_i32.c:41:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   41 |     int32_t exp_result[16] = {0};
      |             ^~~~~~~~~~
vrssum_v_i32.c:30:46: note: shadowed declaration is here
   30 | void vrssum_v_i32_golden(int32_t *a,int32_t *exp_result) {
      |                                     ~~~~~~~~~^~~~~~~~~~
vrssum_v_i32.c:54:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   54 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
vrssum_v_i32.c: In function 'vrssum_v_i32_golden':
vrssum_v_i32.c:69:1: error: expected declaration or statement at end of input
   69 | }
      | ^
vrssum_v_i32.c:30:35: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vrssum_v_i32_golden(int32_t *a,int32_t *exp_result) {
      |                          ~~~~~~~~~^
vrssum_v_i32.c:30:46: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vrssum_v_i32_golden(int32_t *a,int32_t *exp_result) {
      |                                     ~~~~~~~~~^~~~~~~~~~
At top level:
vrssum_v_i32.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrssum_v_i32.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrssum_v_i32"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrssum_v_i32.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrssum_v_i32.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed